# filtering

./: CMakeLists.txt  Doxyfile  Model.ymd  Model_ONI.ymd  Model_simple.ymd
config/: plugins.cfg  resources.cfg
dep/lib/pkgconfig/: yaml-cpp.pc
dep/share/pkgconfig/: eigen3.pc
skelYjt/: ONI_SkelWorld0.yjt  ONI_SkelWorld1.yjt  ONI_SkelWorld2.yjt
src/: Control.h  TODO.txt
src/3DModel/: Joint.cpp  Joint.h  S3DModel.cpp  S3DModel.h  S3DModelQRS.cpp  S3DModelQRS.h
src/FileParsers/: FileParser.cpp  FileParser.h  ResultParser.cpp  ResultParser.h  YamlBodyJoint.cpp  YamlBodyJoint.h  YjtParserInt.cpp  YjtParserInt.h
src/FileParsers/YjtParserClasses/: MixedFileManager_c.cpp  MixedFileManager_c.h  VectorsTable_c.cpp  VectorsTable_c.h
src/filter/: Filter.cpp  Filter.h  PartFilter.cpp  PartFilter.h  PartQRSFilter.cpp  PartQRSFilter.h  Partitionned.h  PartitionnedMMSE.h  SIR.h  _Filter.h
src/filter_temp/: Partitionned.h  PartitionnedMMSE.h  SIR.cpp  SIR.h  _Filter.cpp  _Filter.h
src/observations/: ObsMonoKinect.cpp  ObsMonoKinect.h  ObsMultiKinect.cpp  ObsMultiKinect.h  _Observation.cpp  _Observation.h
src/particles/: _Observation.cpp  _Observation.h  _Particle.cpp  _Particle.h
src/solver/: IKSolver.cpp  IKSolver.h  IKSolverMathias.cpp  IKSolverMathias.h  IKSolverPF.cpp  IKSolverPF.h  IKSolverPFOrient.cpp  IKSolverPFOrient.h
src/test/: Config.cpp  Config.h  FilterInt.cpp  FilterInt.h  test.cpp
src/tools/: _Stats.cpp  _Stats.h  sobol.cpp  sobol.h
src/viewer/: InputListener.cpp  InputListener.h  Line3D.cpp  Line3D.h  S3DViewer.cpp  S3DViewer.h
tempo/: EmptyBodyJoints.yjt  PFFilter.cpp  PFFilter.h  PartQRSFilter.cpp  S3DModel_.cpp  S3DModel_.h
tempo/src/: AppDemarrage.cpp  AppDemarrage.h  Avatar.cpp  Avatar.h  FileParser.cpp  FileParser.h  InputListener.cpp  InputListener.h  main.cpp
